--- a/.travis.yml
+++ b/.travis.yml
@@ -89,8 +89,8 @@ jobs:
   include:
 
     - stage: build
-      name: "jdk11"
-      jdk: openjdk11
+      name: "jdk17"
+      jdk: openjdk17
       script:
         - export STAGE=build
         - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
@@ -111,28 +111,26 @@ jobs:
         - export STAGE=test
         - ant show check
 
-    - stage: disabled
-      name: "sonarscan (jdk11)"
-      jdk: openjdk11
+    - stage: scan
+      name: "sonarscan (jdk17)"
+      jdk: openjdk17
       addons: sonarcloud
       script:
         - export STAGE=scan
         - export ANT_OPTS="-Xms256m -Xmx8g"
         - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
-        - travis_wait 45 ant -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.timeout=2700 -Dsonar.qualitygate.wait=true show sonar
+        - travis_wait 45 ant -Dsonar.token=$SONAR_LOGIN -Dsonar.qualitygate.timeout=2700 -Dsonar.qualitygate.wait=true show sonar
         - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
 
     - stage: scan
-      name: "synk (jdk11)"
-      jdk: openjdk11
+      name: "synk (jdk17)"
+      jdk: openjdk17
       script:
         - export STAGE=scan
         - echo $STAGE
         - ./run-snyk.sh
 
     - stage: scan
-      # name: "gradle sonarscan (jdk11)"
-      # jdk: openjdk11
       name: "gradle sonarscan (jdk17)"
       jdk: openjdk17
       script:
@@ -141,8 +139,8 @@ jobs:
         - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
 
     - stage: snappah
-      name: "olfs-snapshot (jdk11)"
-      jdk: openjdk11
+      name: "olfs-snapshot (jdk17)"
+      jdk: openjdk17
       script:
         - export STAGE=snappah
         - echo "STAGE is ${STAGE}"
@@ -156,8 +154,8 @@ jobs:
         - ls -l ${TRAVIS_BUILD_DIR}/package/
 
     - stage: snappah
-      name: "olfs-build-number (jdk11)"
-      jdk: openjdk11
+      name: "olfs-build-number (jdk17)"
+      jdk: openjdk17
       script:
         - export STAGE=snappah
         - echo "STAGE is ${STAGE}"
@@ -171,8 +169,8 @@ jobs:
         - ls -l ${TRAVIS_BUILD_DIR}/package/
 
     - stage: snappah
-      name: "ngap-snapshot (jdk11)"
-      jdk: openjdk11
+      name: "ngap-snapshot (jdk17)"
+      jdk: openjdk17
       script:
         - export STAGE=snappah
         - echo "STAGE is ${STAGE}"
@@ -186,8 +184,8 @@ jobs:
         - ls -l ${TRAVIS_BUILD_DIR}/package/
 
     - stage: snappah
-      name: "ngap-build-number (jdk11)"
-      jdk: openjdk11
+      name: "ngap-build-number (jdk17)"
+      jdk: openjdk17
       script:
         - export STAGE=snappah
         - echo "STAGE is ${STAGE}"
@@ -201,8 +199,8 @@ jobs:
         - ls -l ${TRAVIS_BUILD_DIR}/package/
 
     - stage: snappah
-      name: "build_dmrpp-snapshot (jdk11)"
-      jdk: openjdk11
+      name: "build_dmrpp-snapshot (jdk17)"
+      jdk: openjdk17
       script:
         - export STAGE=snappah
         - echo "STAGE is ${STAGE}"
@@ -216,8 +214,8 @@ jobs:
         - ls -l ${TRAVIS_BUILD_DIR}/package/
 
     - stage: snappah
-      name: "build_dmrpp-build-number (jdk11)"
-      jdk: openjdk11
+      name: "build_dmrpp-build-number (jdk17)"
+      jdk: openjdk17
       script:
         - export STAGE=snappah
         - echo "STAGE is ${STAGE}"
