--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ plugins {
     id 'war'
     id 'eclipse'
     id 'idea'
-    id "org.sonarqube" version "3.3"
+    // id "org.sonarqube" version "3.3"
+    id "org.sonarqube" version "4.3.1.3277"
 }
 
 sonarqube {
